2007-09-06  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/15-xorb-aux-procs.tcl: Some hacking for a non-errorprone
          installation while using ::xo::db::sql::*

2007-09-05  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/15-xorb-aux-procs.tcl: Added new ::xo::db::require
          function_args call for acs-service-contract packages <
          5.4.0d1

	* Tested for the new ::xo::db::require package
          as introduced by xotcl-core 0.70

2007-09-04  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* Pitched requirement to xotcl-core 0.70. The update for
          acs-service-contract < 5.4.0d1 can't be handled by the
          install/ upgrade scripts, therefore it becomes an explicit
          requirement for the current install procedure to execture
          acs-service-contract-function-args.sql on the target db
          before proceeding with the installation.
	
	* tcl/15-xorb-aux-procs.tcl: First adjustment to xotcl-core
          0.70

2007-08-31  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* tcl/xorb-callback-procs.tcl: The install routine was missing
          the sourcing of the acs_function_args patches to
          acs-service-contract < 5.4.0d1.  
	  In addition, we need to call ::xo::db::DbPackage again, as
          xorb requires upon first-time sourcing some db stubs in
          place. This should be handled more nicely, by an update call
          to DbPackage in xotcl-core, for instance.

	* Pitched dependencies to xotcl-core 0.57, expecting the
          needed package-require patch being incorporated in the HEAD
          version.

	* tcl/15-xorb-aux-procs.tcl: Adjusted to recent xotcl-core
          versions that shifted DbPackage to the ::xo::db namespace
          instead of ::xo::db::sql; its instances are still placed in
          the old namespace.

2007-08-30  Stefan Sobernig  <stefan.sobernig@wu-wien.ac.at>

	* Added first release version of manual, both in the